# digital-experiments

./: .buildinfo  .gitignore  API.md  LICENSE  MANIFEST.in  README.md  TODO  a.ipynb  common_prefix_merge.py  control.html  control.ipynb  genindex.html  index.html  new_api.ipynb  objects.inv  output.json  pyproject.toml  requirements.txt  search.html  searchindex.js  test.ipynb  usage.html
.doctrees/: codeautolink-cache.json  control.doctree  index.doctree  usage.doctree
.doctrees/api/: backends.doctree  callbacks.doctree  controllers.doctree  core.doctree
.github/workflows/: docs.yaml  publish.yaml  tests.yaml
_sources/api/: controllers.rst.txt  core.rst.txt
_static/: copybutton.js
api/: backends.html  callbacks.html  controllers.html  core.html
digital_experiments/: __init__.py  adjectives.txt  backends.py  core.py  experiment.py  ids.py  minimize.py  naming.py  optmization.py  plots.py  querying.py  tee.py  util.py
digital_experiments/backends/: __init__.py  json.py
docs/source/: api.rst  backends-api.rst  callbacks-api.rst  conf.py  control.ipynb  core-api.rst  index.rst  usage.ipynb
docs/source/_static/: df.html
docs/source/_static/css/: linebreaks.css
docs/source/api/: backends.rst  callbacks.rst  kitchen_sink.py
docs/source/some/other/path/: 2023-12-06_20-44-41_455161.pkl
examples/: advanced-usage.ipynb  automation.ipynb  basic-usage.ipynb  basic.ipynb  cross-validated-optimization.ipynb  digital_experiments.ipynb  example_utils.py  optimization.ipynb  realistic_use.ipynb  simple-optimization.ipynb  the_basics.ipynb  util.py  versioning.ipynb  what_is_happening.ipynb
experiments/modified_himmelbau/: code.py  results.csv
src/digital_experiments/: __init__.py  automate.py  backends.py  callbacks.py  control_center.py  controllers.py  core.py  data.py  demos.py  experiment.py  inspection.py  metadata.py  minimize.py  naming.py  nouns.txt  observation.py  opt2.py  optmization.py  plots.py  pretty.py  querying.py  random.py  timing.py  util.py  version_control.py
src/digital_experiments/save_and_load/: backend.py  home.py
src/digital_experiments/search/: distributions.py  skopt_suggest.py  space.py  suggest.py
src/v2/: backends.py  control_center.py  experiment.py  metadata.py  minimize.py  observation.py  querying.py  version_control.py
tests/: test_automate.py  test_backends.py  test_callbacks.py  test_control_center.py  test_controllers.py  test_data.py  test_distributions.py  test_experiment.py  test_experiments.py  test_inspection.py  test_metadata.py  test_minimize.py  test_observation.py  test_optimization.py  test_pretty.py  test_querying.py  test_space.py  test_suggest.py  test_tee.py  test_timing.py  test_util.py  test_version_control.py
