[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-experiments"
version = "1.0.3"
description = "Keep track of digital experiments."
readme = "README.md"
authors = [{ name = "John Gardner", email = "gardner.john97@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["config", "experiments", "optimisation"]
dependencies = [
    "ipython",
    "matplotlib",
    "imageio",
    "numpy",
    "pandas",
    "scikit-learn",
    "scikit-optimize",
    "filelock",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "notebook",
    "pytest",
    "black",
    "bumpver",
    "sphinx",
    "furo",
    "nbsphinx",
    "seedir",
    "emoji",
]

[project.urls]
Homepage = "https://github.com/jla-gardner/digital-experiments"

[tool.bumpver]
current_version = "1.0.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/digital_experiments/__init__.py" = ["{version}"]
