[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-experiments"
version = "1.2.8"
description = "Keep track of digital experiments."
readme = "README.md"
authors = [{ name = "John Gardner", email = "gardner.john97@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["config", "experiments", "optimisation"]
dependencies = [
    "ipython",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "notebook",
    "pytest",
    "ruff",
    "bumpver",
    "sphinx",
    "furo",
    "nbsphinx",
    "seedir",
    "emoji",
    "pytest-cov",
]
publish = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/jla-gardner/digital-experiments"

[tool.bumpver]
current_version = "1.2.8"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/digital_experiments/__init__.py" = ["{version}"]


[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\."
    ]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
include = ["src", "tests"]
extend-include = ["*.ipynb"]

line-length = 80
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["SIM300", "E402", "E703"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "numpy"